# Projeto-Analise_dados_venda

./: README.md  pyproject.toml
app/backend/: database.py  main.py  models.py
app/backend/routers/: auth.py  orders.py  products.py
app/frontend/app/: page.tsx
app/infra/: docker-compose.yml
